--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.33"
 regex = "1.10.2"
+reqwest = "0.11.24"
+tokio = { version = "1.36.0", features = ["full"] }
